--- a/Portfolio/package.json
+++ b/Portfolio/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "npm run build && git add dist -f && git commit -am \"Build and Deploy\" && cd .. && git subtree push --prefix Portfolio/dist origin deploy"
+
   },
   "dependencies": {
     "sass": "^1.71.1",
